# pysv-numpy

./: .gitignore  Dockerfile  readme.md
verilator/: CMakeLists.txt  Makefile  main.cpp  register.hh  top.sv
verilator/mod/: bridge.cc  bridge.hh
verilator/pyfunc/: payload.py
verilator/pyfunc/utils/: parser.py
